Refactored Controllers' unit tests.